--- a/RobotBuilds/Esp32_Stream_Robot1.5/Pages/style.css
+++ b/RobotBuilds/Esp32_Stream_Robot1.5/Pages/style.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  color: white;
+  touch-action: none;
+  overscroll-behavior: contain;
 }
 
 html,
@@ -10,6 +13,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overscroll-behavior: none;
 }
 
 .divider{
@@ -35,6 +39,13 @@ body {
   );
   
 
+}
+.textureBG{
+  background-image: radial-gradient(
+    farthest-corner at 50% 100%,
+    #e48349 -150%,
+    #000 80%
+  );
 }
 .centerPanel{
   /* overflow: hidden; */
@@ -76,6 +87,9 @@ body {
   }
   h1{
     display: none;
+  }
+  .show{
+    display: block ruby;
   }
   #logotextsvg{
     display: none;
@@ -129,7 +143,7 @@ body {
 
 #lightBtn{
   height: 100%;
-  /* color: #f00; */
+  color: black;
 }
 
 ul {
@@ -195,4 +209,19 @@ h1{
   border-radius: 5px;
   font-size: 2vmin;
   padding: 3px;
+}
+
+p{
+  font-size: 4vmin;
+  padding: 3vmin;
+}
+h2{
+  font-size: 5vmin;
+  text-align: center;
+}
+.highlight{
+  color: #e48349;
+}
+button{
+  color: black;
 }
