--- a/RobotBuilds/Esp32_Stream_Robot3/Esp32_Stream_Robot3/data/arrowKeys.css
+++ b/RobotBuilds/Esp32_Stream_Robot3/Esp32_Stream_Robot3/data/arrowKeys.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300);
+/* @import url(https://fonts.googleapis.com/css?family=Lato:300); */
 
 /* html {
   background: radial-gradient(#000, #111);
