--- a/RobotBuilds/Esp32_Stream_Robot3/NodeServer/Pages/styleMainPage.css
+++ b/RobotBuilds/Esp32_Stream_Robot3/NodeServer/Pages/styleMainPage.css
@@ -3,7 +3,7 @@
   padding: 0;
   font-family: Arial, sans-serif;
   color: white;
-  touch-action: none;
+  touch-action: auto;
   /* overscroll-behavior: contain; */
 }
 
